--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/table_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/add_button"
-            android:layout_width="match_parent"
+    android:padding="5dp"
+    android:stretchColumns="1">
+    <TableRow>
+        <TextView
+            android:id="@+id/actual_header"
+            android:layout_width="40dp"
+            android:gravity="center"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="add item" />
+            android:background="@drawable/cell_shape"
+            android:padding="5dp"
+            android:text="#"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/name_header"
+            android:layout_column="1"
+            android:gravity="center"
+            android:text="Item"
+            android:background="@drawable/cell_shape"
+            android:padding="5dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:text="Par"
+            android:layout_width="40dp"
+            android:gravity="center"
+            android:background="@drawable/cell_shape"
+            android:padding="5dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:background="@drawable/cell_shape"
+            android:layout_width="80dp"
+            android:padding="5dp"
+            android:gravity="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="UoM" />
+</TableRow>
+
+
+
+
+
 
 
     <LinearLayout
@@ -36,6 +61,14 @@
             android:layout_weight="2"
             android:text="Calculate" />
 
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="add item" />
+
     </LinearLayout>
 
-</LinearLayout>
+
+</TableLayout>
