--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -1,15 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".AddItemActivity">
+
+    <Spinner
+
+        android:id="@+id/itemCategorySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right" />
+
     <TextView
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Item Name" />
+
+    <EditText
+        android:id="@+id/input_item"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Par" />
+
+    <EditText
+        android:id="@+id/input_par"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content" />
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Unit Of Measurement" />
+
+    <EditText
+        android:id="@+id/input_unit_of_measurement"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="NEW ACTIVTY"/>
+        android:gravity="center|bottom"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/addItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ADD" />
+    </LinearLayout>
 
 </LinearLayout>
