--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -22,7 +22,9 @@
     <EditText
         android:id="@+id/input_item"
         android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:singleLine="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,7 +34,9 @@
     <EditText
         android:id="@+id/input_par"
         android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:singleLine="true"/>
 
 
     <TextView
@@ -43,7 +47,9 @@
     <EditText
         android:id="@+id/input_unit_of_measurement"
         android:layout_width="300dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:imeOptions="actionDone"
+        android:singleLine="true"/>
 
 
     <LinearLayout
