--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionDone"
         android:singleLine="true"
-        android:inputType="textNoSuggestions"/>
+        android:inputType="number" />
 
 
     <TextView
