--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -1,15 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ResultsActivity">
-    <TextView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+
+    <TableLayout
+        android:id="@+id/results_table"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="RESULTS"/>
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:stretchColumns="1">
+        <TableRow>
+            <TextView
+                android:id="@+id/actual_header"
+                android:layout_width="40dp"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:background="@drawable/cell_shape"
+                android:padding="5dp"
+                android:text="#"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/name_header"
+                android:background="@drawable/cell_shape"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Item"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+            <TextView
+                android:text="Actual"
+                android:layout_width="65dp"
+                android:gravity="center"
+                android:background="@drawable/cell_shape"
+                android:padding="5dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:text="Par"
+                android:layout_width="40dp"
+                android:gravity="center"
+                android:background="@drawable/cell_shape"
+                android:padding="5dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:background="@drawable/cell_shape"
+                android:layout_width="60dp"
+                android:padding="5dp"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="UoM" />
+        </TableRow>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center|bottom">
+
+            <Button
+                android:id="@+id/calculate_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="update" />
+
+
+
+        </LinearLayout>
+
+    </TableLayout>
+
 
 </LinearLayout>
